<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <Button
        style="@style/BotonPrincipal"
        android:layout_marginBottom="18dp"
        android:id="@+id/crearHistoria"
        android:text="@string/enviar"
        android:layout_gravity="center"
        android:onClick="escribirDatos"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instrumento"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_gravity="start"
        android:paddingBottom="12dp"
        android:focusable="true"
        android:focusableInTouchMode="true"/>
    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textColor="@color/colorPrimaryButton"
        android:layout_gravity="start"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <EditText
        android:id="@+id/newIncidencias"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:hint="@string/simpleIncidencia"
        android:background="@color/colorPrimaryLight"
        android:textSize="20sp"
        android:padding="5dp"
        android:nextFocusUp="@id/newIncidencias"
        android:nextFocusLeft="@id/newIncidencias"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:checkedButton="@+id/cambios">
        <RadioButton
            android:id="@+id/cambios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noInc"
            android:textSize="20sp"
            android:onClick="radioPulsado" />
        <RadioButton
            android:id="@+id/sin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anyInc"
            android:textSize="20sp"
            android:onClick="radioPulsado"/>
        <RadioButton
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newInc"
            android:textSize="20sp"
            android:onClick="radioPulsado"/>
        <RadioButton
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eraseInc"
            android:textSize="20sp"
            android:onClick="radioPulsado"/>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/antInc"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_gravity="start"
        android:paddingBottom="12dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="104sp"
        android:background="@color/colorPrimaryLight">
        <TextView
            android:id="@+id/incidenciasAntiguas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="20sp"/>
    </ScrollView>

</LinearLayout>