<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="paquete.SessionActivity"
    >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:paddingBottom="12dp"/>

        <EditText
            android:id="@+id/Usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/intUser"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:background="@color/colorPrimaryLight"
            android:fontFamily="Times New Roman"
            android:layout_gravity="start"
            android:textSize="20sp"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:textSize="26sp"
            android:textStyle="bold"
            android:paddingBottom="12dp"
            android:layout_gravity="start"
            android:paddingTop="24dp"/>

        <EditText
            android:id="@+id/Contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/intPass"
            android:fontFamily="Times New Roman"
            android:background="@color/colorPrimaryLight"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:layout_gravity="start"
            android:padding="5dp"
            android:layout_marginBottom="20dp"/>

        <Button
            style="@style/BotonPrincipal"
            android:id="@+id/send"
            android:text="@string/enviar"
            android:layout_gravity="center" />

        <TextView
            android:layout_margin="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cambiar"
            android:onClick="cambiarBase"/>

</LinearLayout>