<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="paquete.NFCwrite"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instrumento"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_gravity="start"
        android:paddingBottom="12dp"/>

    <EditText
        android:id="@+id/Instrumento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/intInst"
        android:inputType="text"
        android:background="@color/colorPrimaryLight"
        android:fontFamily="Times New Roman"
        android:layout_gravity="start"
        android:textSize="20sp"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_gravity="start"
        android:paddingBottom="12dp"/>

    <Button
        style="@style/BotonPrincipal"
        android:layout_marginTop="18dp"
        android:id="@+id/escribir"
        android:text="@string/escribir"
        android:layout_gravity="center"
        android:onClick="escribirDatos"/>

</LinearLayout>