<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="paquete.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/barra"
            android:paddingBottom="8dp"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/name"
                android:gravity="end"
                android:textSize="24sp"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="consultarPeticiones"/>

            <TextView
                android:id="@+id/exit"
                android:text="@string/settings"
                android:clickable="true"
                android:onClick="quitarSesion"
                android:visibility="invisible"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imagen"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/Logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/logogrande"/>

        </RelativeLayout>

        <Button
            style="@style/BotonPrincipal"
            android:id="@+id/Consultar"
            android:layout_gravity="center"
            android:text="@string/consultar"
            android:layout_marginBottom="2dp"
            android:onClick="consultar"/>

        <Button
            style="@style/BotonPrincipal"
            android:id="@+id/Conmuta"
            android:layout_gravity="center"
            android:text="@string/sesion"
            android:layout_marginBottom="2dp"/>

        <Button
            style="@style/BotonPrincipal"
            android:id="@+id/Borrado"
            android:layout_gravity="center"
            android:text="@string/borrado"
            android:visibility="invisible"
            android:onClick="borrarTag"
            android:layout_marginBottom="2dp"/>

    </LinearLayout>

</RelativeLayout>
