<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/Busqueda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/buscar"
            android:inputType="text"
            android:imeOptions="actionSearch"
            android:imeActionLabel=""
            android:background="@color/colorPrimaryLight"
            android:fontFamily="Times New Roman"
            android:layout_gravity="start"
            android:textSize="30sp"
            android:layout_margin="15dp"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:checkedButton="@+id/instrum_option">

                <RadioButton
                    android:id="@+id/instrum_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instrum_option"
                    android:textSize="24sp"/>

                <RadioButton
                    android:id="@+id/nomb_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user"
                    android:textSize="24sp"/>

            </RadioGroup>

        <Button
            style="@style/BotonPrincipal"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:text="@string/buscar"
            android:onClick="buscar"/>

    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false">
    </ListView>

</LinearLayout>